# Octopus

./: README.md
hardware/: README.md
source/FPGA_qxp_prj/prj/: X4_mimo_top.archive.rpt  X4_mimo_top.flow.rpt  X4_mimo_top.ipregen.rpt  X4_mimo_top.map.rpt  X4_mimo_top.map.smsg  X4_mimo_top.map.summary  X4_mimo_top.qarlog  X4_mimo_top.qpf  X4_mimo_top.qsf  X4_mimo_top.qws  X4_mimo_top.tcl  eth_send_top.qsf  global_clk.sopcinfo
source/FPGA_qxp_prj/prj/.qsys_edit/: preferences.xml
source/FPGA_qxp_prj/prj/greybox_tmp/: cbx_args.txt
source/FPGA_qxp_prj/prj/output_files/: X4_mimo_top.pin  X4_mimo_top.sld  X4_mimo_top.sof  gg.stp
source/FPGA_qxp_prj/src/: AIWise_top.v  pin.txt
source/FPGA_qxp_prj/src/BGT60/: bgt60_top.v
source/FPGA_qxp_prj/src/dac_driver/: dac.v
source/FPGA_qxp_prj/src/ethernet/: auto_read_write.v  crc.v  dl_fifo_ctrl.v  download_fifo.qip  download_fifo.v  eth_arp_send.v  eth_data_wr2ram.v  eth_mac_send.v  eth_receive.v  eth_top.v  eth_udp_send.v  generate_data.v  upl_fifo.qip  upl_fifo.v  write_upl_fifo_ctrl.v
source/FPGA_qxp_prj/src/ip_core/: global_clk.qsys  global_clk.sopcinfo  wfifo_8x2k.qip  wfifo_8x2k.v  wfifo_8x2k_inst.v
source/FPGA_qxp_prj/src/pll/: pll.v
source/FPGA_qxp_prj/src/qxp/: cmd_ctrl-u4_pc_cmd.qarlog  cmd_ctrl-u4_pc_cmd.qxp  fmcw_radar_controler-fmcw_radar.qarlog  (+3 more)
source/PC/vitalsign_example_osx_linux/: CMakeLists.txt  README.md
source/arm/: DAG_INTRODUCE.md  README.md
source/arm/dag_scheduler/: blas_tasks.c  blas_tasks.h  captain.c  captain.h  task_define.h  task_sync.c  task_sync.h
source/arm/lib/: VMD.cpp  VMD.h  blas.c  blas.h  blas_tasks.c  blas_tasks.h  fpga_define.h  radar_data.c  radar_data.h
source/arm/stm32f7/: .project  STM32F767IGTX_FLASH.ld  STM32F767IGTX_RAM.ld  bbb Debug.cfg  bbb Debug.launch  bbb.ioc  main.c  makefile
source/example/occupancy/: occupancy.c  occupancy.h
source/example/osx_example/: CMakeLists.txt  main.c
source/example/vital_sign/: vital_sign.c  vital_sign.h
source/fpga/: README.md  fft.v  fft_fifo.v  fir.v  pll.v  ram.v
source/fpga/SDRAM/: sdram.v
source/fpga/cnn/: RAM.v  cnn_top.v
source/fpga/core/: arm_cmd_ctrl.v  fft_ctrl.v  fft_top.v  rst_n.v  sdram_ctrl.v  spi_module.v  top.v  x4_ctrl.v  x4_spi_register.v
source/window_prj/: CMakeLists.txt  README
source/window_prj/gfradar/: gf_radar.c  gf_radar.h
source/window_prj/main/: cmd_ctrl_fpga.h  main.c  main.h  recvdata.c  recvdata.h  udp.c  udp.h
source/window_prj/x4driver/: 8051_firmware.h  defaults.h  get_data.c  get_data.h  radar.c  radar.h  radar_hal.c  radar_hal.h  x4driver.c  x4driver.h  xtcompiler.h
(+55 files in other folders)
